# BellEngine

./: .gitignore  .gitmodules  Bell.sln  CMakeLists.txt  README.md  premake5.lua
Bell/: Bell.vcxproj  Bell.vcxproj.filters
Bell/src/: Bell.h  Test.cpp  Test.h  bpch.h
Bell/src/Bell/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Bell/src/Bell/Common/: macros.h
Bell/src/Bell/Core/: Application.cpp  Application.h  Config.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Random.cpp  Random.h  Time.h  Timestep.h  Window.h
Bell/src/Bell/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Bell/src/Bell/Core/Input/: GamepadCodes.h  Input.h  KeyCodes.h  MouseButtonCodes.h
Bell/src/Bell/Core/Profiler/: InstrumentatonTimer.h
Bell/src/Bell/Debug/: Instrumentor.h
Bell/src/Bell/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Bell/src/Bell/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Bell/src/Bell/Input/: Input.h
Bell/src/Bell/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Bell/src/Bell/Netcode/: Server.cpp  Server.h
Bell/src/Bell/Netcode/Socket/: Socket.cpp  Socket.h
Bell/src/Bell/Networking/: Network.cpp  Network.h  NetworkCommand.h  NetworkConstants.h  NetworkHost.cpp  NetworkHost.h  NetworkTypes.h  Packet.cpp  Packet.h
Bell/src/Bell/Networking/Client/: Client.cpp  Client.h  ClientConfig.h
Bell/src/Bell/Networking/Packet/: Packet.cpp  Packet.h  PacketFuncHandler.h
Bell/src/Bell/Networking/Server/: Server.cpp  Server.h  ServerConfig.h
Bell/src/Bell/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Bell/src/Bell/Renderer/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  (+2 more)
Bell/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Bell/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
BellEditor/: CMakeLists.txt
BellEditor/assets/shaders/: Default.glsl  FlatColor.glsl  VertexColor.glsl
BellEditor/include/: EditorLayer.h
BellEditor/include/Panels/: RendererStatsPanel.h  SceneHierarchyPanel.h
BellEditor/include/Scripts/: EditorCamera.h
BellEditor/src/: BellEditorApp.cpp  EditorLayer.cpp
BellEditor/src/Panels/: RendererStatsPanel.cpp  SceneHierarchyPanel.cpp
BellEngine/: CMakeLists.txt
BellEngine/include/: Bell.h  bpch.h
BellEngine/include/Bell/Base/: Application.h  Core.h  EntryPoint.h  Log.h  Random.h  Time.h  Window.h
BellEngine/include/Bell/Base/Debug/: Assert.h
BellEngine/include/Bell/Base/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
BellEngine/include/Bell/Base/Input/: GamepadCodes.h  Input.h  KeyCodes.h  MouseButtonCodes.h
BellEngine/include/Bell/Common/: bitmaskenums.h  macros.h
BellEngine/include/Bell/Debug/: Instrumentor.h
BellEngine/include/Bell/ImGui/: ImGuiLayer.h
BellEngine/include/Bell/Layer/: Layer.h  LayerStack.h
BellEngine/include/Bell/Renderer/: FrameBuffer.h  GraphicsContext.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  SubTexture2D.h  Texture.h
BellEngine/include/Bell/Renderer/Camera/: Camera.h  OrthographicCamera.h  OrthographicCameraController.h
BellEngine/include/Bell/Renderer/Data/: Buffer.h  VertexArray.h
BellEngine/include/Bell/Scene/: Components.h  Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
BellEngine/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
BellEngine/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
BellEngine/libs/stb_image/: stb_image.cpp  stb_image.h
BellEngine/src/Bell/Base/: Application.cpp  Log.cpp  Random.cpp
BellEngine/src/Bell/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
BellEngine/src/Bell/Layer/: Layer.cpp  LayerStack.cpp
BellEngine/src/Bell/Renderer/: FrameBuffer.cpp  GraphicsContext.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  SubTexture2D.cpp  Texture.cpp
BellEngine/src/Bell/Renderer/Camera/: Camera.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp
BellEngine/src/Bell/Renderer/Data/: Buffer.cpp  VertexArray.cpp
BellEngine/src/Bell/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
BellEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
BellEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
BellEngine/test/: CMakeLists.txt
BellEngine/test/src/: BellTests.cpp  LayerStackTests.cpp  TestLayer.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  application.json  imgui.ini
Sandbox/assets/shaders/: Default.glsl  FlatColor.glsl  Texture.glsl
Sandbox/include/: Sandbox2D.h
Sandbox/src/: Application.cpp  ClientLayer.cpp  ClientLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SandboxClient.h  SandboxServer.h  ServerLayer.cpp  ServerLayer.h
assets/shaders/: FlatColor.glsl  VertexColor.glsl
bin-int/Release-x64/Bell/Bell.tlog/: Bell.lastbuildstate  Bell.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
scripts/: Win-BuildProjects.bat  client.bat  run.sh  server.bat  server.sh
(+2 files in other folders)
